z-index popup fixed

--- a/src/components/popup/index.module.scss
+++ b/src/components/popup/index.module.scss
@@ -14,4 +14,5 @@
   border-radius: 20px;
   padding: 12px;
   text-align: center;
+  z-index: 10;
 }
